# all_in_one_enviro_mini_rs

./: .gitignore  Cargo.toml  Cross.toml  README.html  README.md
src/: audio.rs  display.rs  main.rs  pages.rs  sensors.rs
