[package]
name = "all_in_one_enviro_mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]	
rppal = { version = "0.14.1", features = ["hal","embedded-hal-0"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bme280 = "0.3.0"
systemstat = "0.2.3"
ltr-559 = "0.1.1"
#st7735 = "0.1.0"
st7735-lcd = { version = "0.9.0", path = "../st7735-lcd-rs"}
embedded-hal = "0.2.5"
embedded-graphics="0.8"
embedded-graphics-core="0.4"
embedded-canvas = { version = "0.2.0", path = "../embedded-canvas"}
