[package]
name = "all_in_one_enviro_mini_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]	
rppal = { version = "0.14.1", features = ["hal","embedded-hal-0"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bme280 = "0.3.0"
systemstat = "0.2.3"
ltr-559 = {version= "0.1.1", git = "https://github.com/dawid-nowak/ltr-559"}
st7735-lcd = "0.9.0"
embedded-hal = "0.2.5"
embedded-graphics="0.8"
embedded-graphics-core="0.4"
embedded-layout = "0.4"
embedded-canvas = { version = "0.2.0", git = "https://github.com/dawid-nowak/embedded-canvas"}
portaudio = { version = "0.7", git = "https://github.com/dawid-nowak/rust-portaudio"}
tinybmp = "0.5.0"
eg-seven-segment = "0.2"
plotters = {version = "0.3", default-features = false, features = ["bitmap_backend","all_series"]}
rand = "0.8"
ringbuffer = "0.15"
timer = "0.2"
chrono = "0.4"
signal-hook = "0.3"
bs1770 = "1"
spectrum-analyzer = "1"